# Frogman-Engine-Lab

./: .gitmodules  ReadMe.md
Frogman-Engine-Tests/Benchmark-Windows-Packages/lib/Release/: benchmark.lib
Frogman-Engine-Tests/FE-Core-Test-Cases/: allocator-test.cpp  allocator_adaptor-test.cpp  array-test.cpp  fstring-test.cpp  function-thread-test.cpp  function_table-test.cpp  hash-test.cpp  hash_map-test.cpp  hash_multimap-test.cpp  heap-test.cpp  index_map-test.cpp  iterator-test.cpp  never-dangling_smart-pointer-test.cpp  pool-test.cpp  private-memory-test.cpp  queue-test.cpp  smart_ptr_variants-test.cpp  stack-test.cpp  string-test.cpp  tagged_object-test.cpp  unique_ptr-test.cpp
Frogman-Engine-Tests/FE-Tests/Fuzz-Tests/: CMakeLists.txt  build-fuzz.sh
Frogman-Engine-Tests/FE-Tests/Fuzz-Tests/binaries/: FE.core.algorithm.string.capitalize  FE.core.algorithm.string.capitalize_every_first_letter_of_words  FE.core.algorithm.string.count_chars  FE.core.algorithm.string.length  FE.core.algorithm.string.to_lowercase
Frogman-Engine-Tests/FE-Tests/Unit-Tests/: CMakeLists.txt  build-tests.sh
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.adjacency_graph/: FE.core.adjacency_graph_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.algorithm.math/: FE.core.algorithm.math_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.algorithm.string/: FE.core.algorithm.string_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.algorithm.utility/: FE.core.algorithm.utility_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.containers/: FE.core.containers_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.fstring/: FE.core.fstring_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.iterator/: FE.core.iterator_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.log/: FE.core.log_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.managed/: FE.core.managed_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.memory/: CMakeLists.txt  FE.core.memory_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.pool/: FE.core.pool_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.string/: FE.core.string_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.string_view/: FE.core.string_view_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.thread/: FE.core.thread_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.framework.predefined_main/: FE.framework.predefined_main_test
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.framework.reflection/: FE.framework.reflection_test
In-House/Libraries/memory/: CMakeLists.txt  build.sh
In-House/Libraries/memory/tests/: CMakeLists.txt  test
Source/CMakeLists/: CMakeLists.txt  frogman-engine.cmake  predefined-settings.cmake
Source/CMakeLists/FE_CORE_AVX/: CMakeLists.txt
Source/CMakeLists/FE_CORE_AVX/Windows/debug/lib/: FE_CORE_AVX.lib
Source/CMakeLists/FE_CORE_FRAMEWORK/: CMakeLists.txt
Source/CMakeLists/FE_CORE_FRAMEWORK/Windows/debug/lib/: FE_CORE_FRAMEWORK.lib
Source/CMakeLists/FE_CORE_TEST/: CMakeLists.txt  main.cpp
Source/FE/asm/: __x86_64_memcpy.asm  __x86_64_memcpy.h
Source/FE/core/: __x86_64_aligned_memcpy.asm  allocator.hxx  allocator_adaptor.hxx  block_pool_allocator.hxx  char_traits.hxx  container_storage.hxx  debug.h  fstring.hxx  function.hxx  hash.hpp  heap_memory.hpp  iterator.hxx  memory.hxx  memory_block.hxx  memory_storage.hxx  pair.hxx  pool.hxx  pool_allocator.hxx  queue.hxx  random.hxx  stack.hxx  string.hxx  string_view.hxx  type_traits.hxx  types.hxx
Source/FE/core/algorithm/: math.h  string.hxx  utility.hxx
Source/FE/core/algorithm/private/: math.cpp
Source/FE/core/containers/: array.hxx  hash_map.hxx  hash_multimap.hxx  heap.hxx  index_map.hxx  map.hxx  queue.hxx  set.hxx  stack.hxx
Source/FE/core/log/: logger.hpp  macros.h
Source/FE/core/log/private/: format_string.cpp  logger.cpp
Source/FE/core/macros/: macro_definitions.h
Source/FE/core/managed/: exclusive_ptr.hxx  unique_ptr.hxx
Source/FE/core/private/: allocator_base.hpp  clock.cpp  memory_metrics.cpp  memory_traits.hxx  thread.cpp
Source/FE/core/smart_pointers/: exclusive_ptr.hxx  proxy_ptr.hxx  unique_ptr.hxx
Source/FE/core/smart_pointers/private/: ref_table.hxx
Source/FE/framework/: framework.hpp
Source/FE/framework/private/: framework.cpp  function_table.cpp  internal_functions.h
Source/FE/framework/reflection/: function_table.hpp  variable_map.hpp
Source/FE/miscellaneous/: configuration.h
Source/FE/miscellaneous/private/: macro_restrictions.h
Third-Party-Libraries/boost_1_82_0/include/boost/pool/: pool_alloc.hpp
Third-Party-Libraries/oneapi-tbb/include/oneapi/tbb/: memory_pool.h
